# rsdis_code

./: .gitignore
_HISTORY/ros1/ros1_semana2/semana2_service/: CMakeLists.txt
_HISTORY/ros1/ros1_semana2_chernobylRover/src/chernobyl_rover/: package.xml
_HISTORY/ros1/ros1_semana2_chernobylRover/src/chernobyl_rover/src/: rover.cpp
_HISTORY/ros1/semana2_chernobylRover/src/chernobyl_rover/: CMakeLists.txt
_HISTORY/ros1/semana2_chernobylRover/src/my_interfaces/: CMakeLists.txt
_HISTORY/ros1/semana2_service/src/: converter_service.cpp
_HISTORY/ros2/my_interfaces/: package.xml
_HISTORY/ros2/my_interfaces/src/: converter_service.cpp
_HISTORY/ros2/ros2_semana2/semana2_service/src/: converter_service.cpp
_HISTORY/ros2/ros2_semana2/semana2_service/srv/: D2R.srv
_HISTORY/ros2/ros2_semana2_chernobylRover/src/chernobyl_rover/: package.xml
_HISTORY/ros2/ros2_semana2_chernobylRover/src/chernobyl_rover/src/: rover.cpp
_HISTORY/ros2/semana2_chernobylRover/source/chernobyl_rover/: CMakeLists.txt
_HISTORY/ros2/semana2_chernobylRover/source/chernobyl_rover/src/: rover.cpp
_HISTORY/ros2/semana2_chernobylRover/src/my_interfaces/: CMakeLists.txt
_HISTORY/ros2/semana2_service/srv/: ECEF2G.srv  R2D.srv
_SUBMISSIONS/G03_t2a/ros1_semana2_chernobylRover/src/my_interfaces/msg/: ChernobylSensors.msg
_SUBMISSIONS/G03_t2b/ros1_semana2/semana2_service/: package.xml
_SUBMISSIONS/G03_t2b/ros2_semana2/semana2_service/: CMakeLists.txt  package.xml
rsdis_ros1/: frames.gv
rsdis_ros1/Semana3_ROS1/: CMakeLists.txt  package.xml
rsdis_ros1/src/Semana3_ROS1/src/: cylinder_detect.cpp  turtle_control.cpp
rsdis_ros1/src/ros1_semana2_chernobylRover/src/my_interfaces/: package.xml
rsdis_ros2/Semana3_Parte1_ROS2/: CMakeLists.txt  package.xml
rsdis_ros2/Semana3_Parte1_ROS2/src/: turtle_control.cpp
rsdis_ros2/Semana3_ROS2/: CMakeLists.txt
rsdis_ros2/Semana3_ROS2/src/: cylinder_detect.cpp  turtle_control.cpp
rsdis_ros2/my_interfaces/: CMakeLists.txt  package.xml
rsdis_ros2/src/ros2_semana2_chernobylRover/src/my_interfaces/: package.xml
