<?xml version="1.0"?>
<package format="2">
  <name>chernobyl_rover</name>
  <version>0.0.1</version>
  <description>Rover node that uses my_interfaces/ChernobylSensors.</description>
  <maintainer email="rodrigo.c.oliveira@inesctec.pt">rodrigo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>my_interfaces</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>my_interfaces</exec_depend>

  <export/>
</package>
