<?xml version="1.0"?>
<package format="2">
  <name>my_interfaces</name>
  <version>0.0.1</version>
  <description>Custom message definitions for Chernobyl Rover.</description>

  <maintainer email="rodrigo.c.oliveira@inesctec.pt">rodrigo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Needed to generate messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Needed at runtime when other pkgs use the messages -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>
